[metadata]
name = agemo
version = 0.0.2
license = GNU GPLv3+ 
author = Gertjan Bisschop
author_email = gertjanbisschop@gmail.com
description = Laplace transformed coalescence times
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/LohseLab/agemo
project_urls =
    Github = https://github.com/LohseLab/agemo

classifiers = 
    Programming Language :: Python :: 3

keywords = 
    Laplace transform
    structured coalescent
    generating function

[options]
packages = agemo
python_requires = >=3.7
install_requires = 
    numpy>=1.18
    numba>=0.54.0    

[options.extras_require]
tests = 
    pytest>=6.2.5
    sage-conf
    sagemath-standard>9.2

[tool:pytest]
testpaths = 
    tests
